# blackboxai-1744249349418

./: CMakeLists.txt  FPSGame.sln  FPSGame.vcxproj  FPSGame.vcxproj.filters  README.md  README_WINDOWS.md  download.html  index.html
shaders/: PixelShader.hlsl  VertexShader.hlsl
src/: Camera.cpp  Camera.h  Game.cpp  Game.h  Input.cpp  Input.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  UIOverlay.cpp  UIOverlay.h  main.cpp
